<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:gravity="center"
	android:layout_margin="@dimen/activity_margin"
	android:orientation="vertical">
	<TextView
		android:id="@+id/appName_textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="50sp"
		android:layout_marginStart="25dp"
		android:layout_marginBottom="10dp"
		android:layout_above="@id/login_input"/>
	<TextView
		android:id="@+id/status_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:visibility="gone"
		android:layout_above="@id/appName_textView"/>
	<EditText
		android:id="@+id/login_input"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:padding="15dp"
		android:textSize="@dimen/textSize_medium"
		android:autofillHints=""
		android:hint="@string/login_hint"
		android:inputType="textEmailAddress"
		android:background="@drawable/et_custom"
		android:layout_above="@id/password_input" />
	<EditText
		android:id="@+id/password_input"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:padding="15dp"
		android:textSize="@dimen/textSize_medium"
		android:layout_centerInParent="true"
		android:autofillHints=""
		android:hint="@string/password_hint"
		android:inputType="textPassword"
		android:background="@drawable/et_custom"
		app:layout_constraintBottom_toTopOf="@id/auth_line" />
	<Button
		android:id="@+id/submit_button"
		android:layout_below="@id/password_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:textSize="@dimen/textSize_medium"
		android:layout_alignParentEnd="true"
		android:layout_margin="10dp"
		android:text="@string/register" />
	<RelativeLayout
		android:id="@+id/auth_line"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@id/submit_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/password_input"
		app:layout_constraintTop_toTopOf="parent">
		<Switch
			android:id="@+id/auth_type_switch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:layout_margin="10dp" />
		<ProgressBar
			android:id="@+id/progress_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:visibility="gone" />
	</RelativeLayout>
	<TextView
		android:id="@+id/other_methods_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:text="@string/choose_oauth"
		android:textSize="23sp"
		app:layout_constraintTop_toBottomOf="@id/auth_line"
		android:layout_below="@id/auth_line"/>
	<RelativeLayout
		android:id="@+id/github_google_btns"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_below="@id/other_methods_text">
		<ImageButton
			android:id="@+id/google_log"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:contentDescription="@string/login_google"
			android:onClick="loginWithGoogle"
			android:src="@drawable/ic_google" />
		<ImageButton
			android:id="@+id/github_log"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="10dp"
			android:layout_toEndOf="@id/google_log"
			android:contentDescription="@string/login_github"
			android:onClick="loginWithGithub"
			android:src="@drawable/ic_github" />
		<FrameLayout
			android:id="@+id/facebook_frame"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@id/github_log"
			android:clickable="true"
			android:focusable="true">
			<ImageButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:clickable="false"
				android:contentDescription="@string/login_facebook"
				android:src="@drawable/ic_facebook" />
			<com.facebook.login.widget.LoginButton
				android:visibility="gone"
				android:id="@+id/facebook_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="true"
				style="@style/FacebookLoginButton"
				android:focusable="true" />
		</FrameLayout>
	</RelativeLayout>
</RelativeLayout>